--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .App{
     width: 395px;
-    background: rgb(192, 181, 162);
-}
+    /* background: rgb(255, 255, 255); */
+    background: linear-gradient(45deg, rgb(199, 162, 214), rgba(82, 94, 182, 0.605));}
