--- a/src/components/pages/main/Main.css
+++ b/src/components/pages/main/Main.css
@@ -1,13 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 .coffee__wrapper{
     display: flex;
     flex-wrap: wrap;
+    /* flex-direction: column; */
 }
 
 .item__img{
     width: 100px;
 }
+.item__title{
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+
+}
 
 .coffee__item{
     margin-left: 18px;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.item-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.button__pay{
+    margin-top: 5px;
+width: 90px;
+height: 30px;
+border-radius: 5px;
+font-size: 14px;
+background: rgb(242, 169, 59);
+}
+
+.button__pay:hover{
+    cursor: pointer;
+    transform: translateY(-4px);
 }
