--- a/src/components/pages/navigation/NavMenu.css
+++ b/src/components/pages/navigation/NavMenu.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap');
+
 .nav {
     margin-top: 15px;
     text-align: center;
@@ -12,4 +14,5 @@
 .nav ul li a {
     text-decoration: none;
     font-size: 22px;
+    font-family: 'Poppins', sans-serif;
 }
